feat: 将续期费用和续期时长提取为可配置项
- 添加续期配置项 (renewCost, renewDays) 支持在管理后台设置
- Server.php: 从数据库读取续期配置，支持动态更新
- server.php: 添加 getRenewConfig() 函数支持热更新配置
- setting.html: 在系统设置页面添加续期费用和时长配置UI
- account.html: 使用动态配置显示续期价格
- example.env: 添加 RENEW_COST 和 RENEW_DAYS 配置项

配置优先级: 数据库 > .env > 默认值

--- a/example.env
+++ b/example.env
@@ -57,6 +57,12 @@ EMBY_LINE_LIST_0_URL = http://127.0.0.1:8096
 EMBY_LINE_LIST_1_NAME = 优化线路
 EMBY_LINE_LIST_1_URL = http://192.168.1.1:80
 
+# 续期配置
+# 续期费用（RCoin），默认10
+RENEW_COST = 10
+# 续期时长（天），默认30
+RENEW_DAYS = 30
+
 # 易支付相关
 # url一定要有最后的斜杠
 PAY_URL = https://pay.randallanjie.com/
