docs: 重写 README 并更新 Docker 镜像为 tamakoo/emby-controller

--- a/docker-compose-all-2.yml
+++ b/docker-compose-all-2.yml
@@ -1,6 +1,6 @@
 services:
   emby-controller:
-    image: emby
+    image: tamakoo/emby-controller:latest
     env_file:
       - .env
     volumes:
